src/snapshots/tptp__fof__tests__fof_arguments-3.snap
---
source: src/fof.rs
expression: parsed
---
Arguments(
    [
        Variable(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
    ],
)
