src/snapshots/tptp__fof__tests__fof_arguments-5.snap
---
source: src/fof.rs
expression: parsed
---
Arguments(
    [
        Variable(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
        Function(
            Plain(
                Function(
                    Functor(
                        Lower(
                            LowerWord(
                                "f",
                            ),
                        ),
                    ),
                    Arguments(
                        [
                            Variable(
                                Variable(
                                    UpperWord(
                                        "X",
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ),
    ],
)
