src/snapshots/tptp__fof__tests__fof_arguments.snap
---
source: src/fof.rs
expression: parsed
---
Arguments(
    [
        Function(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
