src/snapshots/tptp__fof__tests__fof_atomic_formula-5.snap
---
source: src/fof.rs
expression: parsed
---
Plain(
    PlainAtomicFormula(
        Function(
            Functor(
                Lower(
                    LowerWord(
                        "p",
                    ),
                ),
            ),
            Arguments(
                [
                    Variable(
                        Variable(
                            UpperWord(
                                "X",
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
