src/snapshots/tptp__fof__tests__fof_atomic_formula-7.snap
---
source: src/fof.rs
expression: parsed
---
System(
    SystemAtomicFormula(
        Constant(
            SystemConstant(
                SystemFunctor(
                    AtomicSystemWord(
                        DollarDollarWord(
                            LowerWord(
                                "system",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
