src/snapshots/tptp__fof__tests__fof_atomic_formula.snap
---
source: src/fof.rs
expression: parsed
---
Defined(
    Plain(
        DefinedPlainFormula(
            Constant(
                DefinedConstant(
                    DefinedFunctor(
                        AtomicDefinedWord(
                            DollarWord(
                                LowerWord(
                                    "true",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
