src/snapshots/tptp__fof__tests__fof_binary_assoc-3.snap
---
source: src/fof.rs
expression: parsed
---
And(
    AndFormula(
        [
            Unitary(
                Atomic(
                    Plain(
                        PlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            Unitary(
                Atomic(
                    Plain(
                        PlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "q",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
